# MeshLoading

./: .gitignore  CMakeLists.txt
assets/models/: sm_turret.fbx  t_flamethrower.tga
assets/shaders/: shader.fs  shader.vs
include/: DataTypes.h  Mesh.h  Model.h  Shader.h
src/: main.cpp
